[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/GameModeEndless.gd" type="Script" id=1]
[ext_resource path="res://scenes/Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://lists/Filler.tres" type="Resource" id=3]
[ext_resource path="res://assets/fonts/montreal/Montreal-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/PopLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Countdown.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="GameModeEndless" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" parent="." instance=ExtResource( 2 )]
block_lists = [ ExtResource( 3 ) ]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 676.0
margin_bottom = 40.0
custom_constants/margin_right = 32
custom_constants/margin_top = 12
custom_constants/margin_left = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 12.0
margin_right = 644.0
margin_bottom = 77.0
custom_constants/separation = 16
alignment = 2

[node name="ScoreContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 372.0
margin_right = 484.0
margin_bottom = 65.0
rect_min_size = Vector2( 112, 32 )
custom_constants/separation = -4

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/ScoreContainer"]
margin_right = 112.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
uppercase = true

[node name="ScorePopLabel" parent="MarginContainer/HBoxContainer/ScoreContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 21.0
margin_right = 112.0
margin_bottom = 65.0
valign = 0

[node name="HighScoreContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 612.0
margin_bottom = 65.0
rect_min_size = Vector2( 112, 32 )
custom_constants/separation = -4

[node name="HighScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/HighScoreContainer"]
margin_right = 112.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "High Score"
align = 1
uppercase = true

[node name="HighScorePopLabel" parent="MarginContainer/HBoxContainer/HighScoreContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 21.0
margin_right = 112.0
margin_bottom = 65.0
valign = 0

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]

[node name="Countdown" parent="." instance=ExtResource( 7 )]

[connection signal="high_score_updated" from="." to="MarginContainer/HBoxContainer/HighScoreContainer/HighScorePopLabel" method="_on_value_source_updated"]
[connection signal="score_updated" from="." to="MarginContainer/HBoxContainer/ScoreContainer/ScorePopLabel" method="_on_value_source_updated"]
[connection signal="match_found" from="Grid" to="." method="_on_grid_match_found"]
[connection signal="countdown_finished" from="Countdown" to="PauseMenu" method="_on_countdown_finished"]
